iglu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iglu-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iglu
  template:
    metadata:
      labels:
        app: iglu
    spec:
      containers:
        - name: iglu-container
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
          - name: iglu-configmap
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      volumes:
      - name: iglu-configmap
        configMap:
          name: iglu-configmap
          items:
          - key: index.html
            path: index.html
