iglu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iglu-service
  namespace: default
spec:
  selector:
    app: iglu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
